--- a/src/config.cfg
+++ b/src/config.cfg
@@ -1,13 +1,22 @@
 # default settings for sessions
 [DEFAULT]
-ConnectionType=initiator
+ConnectionType=acceptor
 ReconnectInterval=60
-SenderCompID=TW
+HeartBtInt=30
+ConnectionType=acceptor
+SocketAcceptPort=5001
+SocketReuseAddress=Y
+StartTime=00:00:00
+EndTime=23:59:59
+FileLogPath=./log
+SSLProtocol = all
+TimestampPrecision=6
+PreserveMessageFieldsOrder=N
 
 # session definition
 [SESSION]
 # inherit ConnectionType, ReconnectInterval and SenderCompID from default
-BeginString=FIX4.2
+BeginString=FIX.4.2
 SenderCompID=TRADING_FIRM_1
 TargetCompID=EXCHANGE_ABC
 SocketAcceptPort=9876
