--- a/src/myconfig.cfg
+++ b/src/myconfig.cfg
@@ -36,5 +36,5 @@ SenderCompID=EXECUTOR
 TargetCompID=CLIENT1
 FileStorePath=store
 DataDictionary=spec/FIX40.xml
-# SocketConnectHost=localhost
-# SocketConnectPort=9876
+SocketConnectHost=localhost
+SocketConnectPort=9876
