--- a/tesM/config.cfg
+++ b/tesM/config.cfg
@@ -1,22 +1,55 @@
+# default settings for sessions
 [DEFAULT]
 ConnectionType=acceptor
-ReconnectInterval=5
-SenderCompID=YOUR_SENDER_COMP_ID
-TargetCompID=YOUR_TARGET_COMP_ID
-FileStorePath=store
-FileLogPath=log
-StartTime=23:59:59
-EndTime=23:59:59
-UseDataDictionary=Y
-DataDictionary=spec/FIX50.xml
+ReconnectInterval=60
 HeartBtInt=30
+ConnectionType=acceptor
+SocketAcceptPort=5001
+SocketReuseAddress=Y
+StartTime=00:00:00
+EndTime=23:59:59
+FileLogPath=./log
+SSLProtocol = all
+TimestampPrecision=6
+PreserveMessageFieldsOrder=N
+
+# session definition
+[SESSION]
+# inherit ConnectionType, ReconnectInterval and SenderCompID from default
+BeginString=FIX.4.2
+SenderCompID=TRADING_FIRM_1
+TargetCompID=EXCHANGE_ABC
+SocketAcceptPort=9876
+StartTime=12:30:00
+EndTime=23:30:00
+HeartBtInt=20
+SocketConnectPort=9823
+SocketConnectHost=123.123.123.123
+DataDictionary=spec/FIX41.xml
 
 [SESSION]
-ConnectionType=acceptor
-BeginString=FIX.4.4
-DataDictionary=spec/FIX50.xml
-# SocketConnectHost=127.0.0.1
-SocketConnectPort=9876
-FileLogPath=log/
-FileStorePath=store/
-SocketAcceptPort=9876
+BeginString=FIX.4.0
+TargetCompID=ISLD
+StartTime=12:00:00
+EndTime=23:00:00
+HeartBtInt=30
+SocketConnectPort=8323
+SocketConnectHost=23.23.23.23
+DataDictionary=spec/FIX40.xml
+
+[SESSION]
+BeginString=FIX.4.2
+TargetCompID=INCA
+StartTime=12:30:00
+EndTime=21:30:00
+# overide default setting for RecconnectInterval
+ReconnectInterval=30
+HeartBtInt=30
+SocketConnectPort=6523
+SocketConnectHost=3.3.3.3
+# (optional) alternate connection ports and hosts to cycle through on failover
+SocketConnectPort1=8392
+SocketConnectHost1=8.8.8.8
+SocketConnectPort2=2932
+SocketConnectHost2=12.12.12.12
+DataDictionary=spec/FIX42.xml
