--- a/HelloWorld/acceptor.cfg
+++ b/HelloWorld/acceptor.cfg
@@ -10,9 +10,12 @@ HeartBtInt=30   # Tambahkan parameter HeartBtInt dengan nilai yang sesuai
 
 
 [SESSION]
-BeginString=FIX.4.2
+BeginString=FIXT.1.1
 SenderCompID=ACCEPTOR
 TargetCompID=INITIATOR
 UseDataDictionary=Y
-DataDictionary=spec/FIX42.xml
+#DataDictionary=spec/FIX50.xml
 HeartBtInt=20
+DefaultApplVerID=FIX.5.0
+TransportDataDictionary=spec/FIXT.1.1.xml 
+AppDataDictionary=spec/FIX50.xml
