--- a/HelloWorld/initiator.cfg
+++ b/HelloWorld/initiator.cfg
@@ -10,10 +10,14 @@ SocketConnectPort=9876
 HeartBtInt=30
 
 [SESSION]
-BeginString=FIX.4.2
+BeginString=FIXT.1.1
 SenderCompID=INITIATOR
 TargetCompID=ACCEPTOR
 SocketConnectHost=localhost
 SocketConnectPort=9876
 UseDataDictionary=Y
-DataDictionary=spec/FIX42.xml
+#DataDictionary=spec/FIX50.xml
+
+DefaultApplVerID=FIX.5.0
+TransportDataDictionary=spec/FIXT.1.1.xml 
+AppDataDictionary=spec/FIX50.xml
