--- a/HelloWorld/acceptor.cfg
+++ b/HelloWorld/acceptor.cfg
@@ -6,7 +6,7 @@ FileStorePath=store/acceptor
 StartTime=00:00:00
 EndTime=23:59:59
 SocketAcceptPort=9876
-HeartBtInt=30   # Tambahkan parameter HeartBtInt dengan nilai yang sesuai
+HeartBtInt=0.1   # Tambahkan parameter HeartBtInt dengan nilai yang sesuai
 
 
 [SESSION]
@@ -14,8 +14,10 @@ BeginString=FIXT.1.1
 SenderCompID=ACCEPTOR
 TargetCompID=INITIATOR
 UseDataDictionary=Y
-#DataDictionary=spec/FIX50.xml
-HeartBtInt=20
-DefaultApplVerID=FIX.5.0
+StartTime=00:00:00
+EndTime=23:59:59
+DataDictionary=spec/FIX50.xml
+HeartBtInt=0.1
+DefaultApplVerID=spec/FIX.5.0
 TransportDataDictionary=spec/FIXT.1.1.xml 
 AppDataDictionary=spec/FIX50.xml
