--- a/HelloWorld/initiator.cfg
+++ b/HelloWorld/initiator.cfg
@@ -7,7 +7,7 @@ StartTime=00:00:00
 EndTime=23:59:59
 SocketConnectHost=localhost
 SocketConnectPort=9876
-HeartBtInt=30
+HeartBtInt=1
 
 [SESSION]
 BeginString=FIXT.1.1
@@ -16,7 +16,10 @@ TargetCompID=ACCEPTOR
 SocketConnectHost=localhost
 SocketConnectPort=9876
 UseDataDictionary=Y
+StartTime=00:00:00
+EndTime=23:59:59
 #DataDictionary=spec/FIX50.xml
+
 
 DefaultApplVerID=FIX.5.0
 TransportDataDictionary=spec/FIXT.1.1.xml 
