--- a/HelloWorld/acceptor.cfg
+++ b/HelloWorld/acceptor.cfg
@@ -5,7 +5,7 @@ FileLogPath=logs/acceptor
 FileStorePath=store/acceptor
 StartTime=00:00:00
 EndTime=23:59:59
-SocketAcceptPort=9876
+SocketAcceptPort=59881
 HeartBtInt=0.1   # Tambahkan parameter HeartBtInt dengan nilai yang sesuai
 
 
@@ -21,3 +21,4 @@ HeartBtInt=0.1
 DefaultApplVerID=spec/FIX.5.0
 TransportDataDictionary=spec/FIXT.1.1.xml 
 AppDataDictionary=spec/FIX50.xml
+EncryptMethod=SSL
