--- a/HelloWorld/initiator.cfg
+++ b/HelloWorld/initiator.cfg
@@ -6,21 +6,22 @@ FileStorePath=store/initiator
 StartTime=00:00:00
 EndTime=23:59:59
 SocketConnectHost=localhost
-SocketConnectPort=9876
+SocketConnectPort=59881
 HeartBtInt=1
+ResetOnLogon=Y
+CheckLatency=N
 
 [SESSION]
 BeginString=FIXT.1.1
 SenderCompID=INITIATOR
 TargetCompID=ACCEPTOR
 SocketConnectHost=localhost
-SocketConnectPort=9876
+SocketConnectPort=59881
 UseDataDictionary=Y
 StartTime=00:00:00
 EndTime=23:59:59
 #DataDictionary=spec/FIX50.xml
-
-
 DefaultApplVerID=FIX.5.0
 TransportDataDictionary=spec/FIXT.1.1.xml 
 AppDataDictionary=spec/FIX50.xml
+EncryptMethod=SSL
