--- a/tesM/config.cfg
+++ b/tesM/config.cfg
@@ -1,55 +1,24 @@
-# default settings for sessions
 [DEFAULT]
 ConnectionType=acceptor
 ReconnectInterval=60
-HeartBtInt=30
-ConnectionType=acceptor
-SocketAcceptPort=5001
-SocketReuseAddress=Y
+FileLogPath=logs/acceptor
+FileStorePath=store/acceptor
 StartTime=00:00:00
 EndTime=23:59:59
-FileLogPath=./log
-SSLProtocol = all
-TimestampPrecision=6
-PreserveMessageFieldsOrder=N
+SocketAcceptPort=59881
+HeartBtInt=0.1   # Tambahkan parameter HeartBtInt dengan nilai yang sesuai
 
-# session definition
-[SESSION]
-# inherit ConnectionType, ReconnectInterval and SenderCompID from default
-BeginString=FIX.4.2
-SenderCompID=TRADING_FIRM_1
-TargetCompID=EXCHANGE_ABC
-SocketAcceptPort=9876
-StartTime=12:30:00
-EndTime=23:30:00
-HeartBtInt=20
-SocketConnectPort=9823
-SocketConnectHost=123.123.123.123
-DataDictionary=spec/FIX41.xml
 
 [SESSION]
-BeginString=FIX.4.0
-TargetCompID=ISLD
-StartTime=12:00:00
-EndTime=23:00:00
-HeartBtInt=30
-SocketConnectPort=8323
-SocketConnectHost=23.23.23.23
-DataDictionary=spec/FIX40.xml
-
-[SESSION]
-BeginString=FIX.4.2
-TargetCompID=INCA
-StartTime=12:30:00
-EndTime=21:30:00
-# overide default setting for RecconnectInterval
-ReconnectInterval=30
-HeartBtInt=30
-SocketConnectPort=6523
-SocketConnectHost=3.3.3.3
-# (optional) alternate connection ports and hosts to cycle through on failover
-SocketConnectPort1=8392
-SocketConnectHost1=8.8.8.8
-SocketConnectPort2=2932
-SocketConnectHost2=12.12.12.12
-DataDictionary=spec/FIX42.xml
+BeginString=FIXT.1.1
+SenderCompID=ACCEPTOR
+TargetCompID=INITIATOR
+UseDataDictionary=Y
+StartTime=00:00:00
+EndTime=23:59:59
+DataDictionary=spec/FIX50.xml
+HeartBtInt=0.1
+DefaultApplVerID=spec/FIX.5.0
+TransportDataDictionary=spec/FIXT.1.1.xml 
+AppDataDictionary=spec/FIX50.xml
+EncryptMethod=SSL
