--- a/QuickfixAppTest/client/initiator.cfg
+++ b/QuickfixAppTest/client/initiator.cfg
@@ -1,25 +1,53 @@
+# [DEFAULT]
+# ConnectionType=initiator
+# ReconnectInterval=60
+# FileLogPath=logs/initiator
+# FileStorePath=store/initiator
+# StartTime=00:00:00
+# EndTime=00:00:00
+# SocketConnectHost=localhost
+# SocketConnectPort=59881
+# HeartBtInt=1
+# ResetOnLogon=Y
+# CheckLatency=N
+
+# [SESSION]
+# BeginString=FIXT.1.1
+# SenderCompID=INITIATOR
+# TargetCompID=ACCEPTOR
+# SocketConnectHost=localhost
+# SocketConnectPort=59881
+# UseDataDictionary=Y
+# StartTime=00:00:00
+# EndTime=00:00:00
+# TimeZone=Asia/Jakarta
+# #DataDictionary=spec/FIX50.xml
+# DefaultApplVerID=FIX.5.0
+# TransportDataDictionary=spec/FIXT.1.1.xml 
+# AppDataDictionary=spec/FIX50.xml
+# EncryptMethod=SSL
+
+
 [DEFAULT]
 ConnectionType=initiator
-ReconnectInterval=60
-FileLogPath=logs/initiator
-FileStorePath=store/initiator
+HeartBtInt=30
+ReconnectInterval=1
+FileStorePath=store
+FileLogPath=log
 StartTime=00:00:00
-EndTime=23:59:59
+EndTime=00:00:00
+UseDataDictionary=N
 SocketConnectHost=localhost
-SocketConnectPort=59881
-HeartBtInt=1
-ResetOnLogon=Y
-CheckLatency=N
 
 [SESSION]
 BeginString=FIXT.1.1
 SenderCompID=INITIATOR
 TargetCompID=ACCEPTOR
-SocketConnectHost=localhost
-SocketConnectPort=59881
+SocketConnectPort=5001
 UseDataDictionary=Y
 StartTime=00:00:00
-EndTime=23:59:59
+EndTime=00:00:00
+TimeZone=Asia/Jakarta
 #DataDictionary=spec/FIX50.xml
 DefaultApplVerID=FIX.5.0
 TransportDataDictionary=spec/FIXT.1.1.xml 
